[project]
name = "pyedstem"
version = "0.3.0"
description = "Easy-to-use Python client for the Ed Stem API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [
    { name = "AlexDrBanana" },
]
keywords = ["edstem", "ed-stem", "education", "api-client", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "markdownify>=1.2.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
]

[project.urls]
Homepage = "https://github.com/AlexDrBanana/pyedstem"
Documentation = "https://alexdrbanana.github.io/pyedstem/"
Repository = "https://github.com/AlexDrBanana/pyedstem"
Issues = "https://github.com/AlexDrBanana/pyedstem/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pypi-release"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"

[tool.hatch.build.targets.wheel]
packages = ["src/pyedstem"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/README.md",
    "/LICENSE",
    "/mkdocs.yml",
    "/pyproject.toml",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
docs = [
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.30.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
